float_eq/tests/derive_tests/generic/generic_derive_float_eq.rs
use float_eq::FloatEq;

#[derive(Debug, PartialEq, FloatEq)]
#[float_eq(ulps = "MyComplexGenericUlps")]
struct MyComplexGeneric<T> {
    re: T,
    im: T,
}

fn main() {}
